//////////////////////////////////////////////////////////////////////////////
// WARNING: This code is machine generated. Manual changes will be overridden.

syntax = "proto3";

package octaneapi;

option optimize_for = CODE_SIZE;

import "common.proto";
import "google/protobuf/empty.proto";

 // GRPC proto definitions for 'ApiCheckBox' class from 'apicheckbox.h'
message ApiCheckBox
{
    // Request packet corresponding to '[in] parameters in ApiCheckBox::create'
    message createRequest
    {
        // Text to display alongside the check box. Can be a NULL pointer.
        string text = 1;
        CheckedCallbackT callback = 2;
        // Private data, passed back with the callback.
        uint64 privateData = 3;
    }

    // Response packet corresponding to '[out] parameters in 'ApiCheckBox::create'
    message createResponse
    {
        //     Pointer to the check box. Don't call delete on this pointer but call destroy().
        ObjectRef result = 1;
        // Id of the callback function allocated by the server and sent to the client
        uint32 callbackId = 2;
    }

    // Request packet corresponding to '[in] parameters in ApiCheckBox::destroy'
    message destroyRequest
    {
        // ID of the object on which to call the method
        ObjectRef objectPtr = 1;
    }

    // Request packet corresponding to '[in] parameters in ApiCheckBox::setChecked'
    message setCheckedRequest
    {
        // ID of the object on which to call the method
        ObjectRef objectPtr = 1;
        // TRUE for checked, FALSE for unchecked.
        bool checked = 2;
        // TRUE to trigger an event callback.
        bool sendEvent = 3;
    }

    // Request packet corresponding to '[in] parameters in ApiCheckBox::isChecked'
    message isCheckedRequest
    {
        // ID of the object on which to call the method
        ObjectRef objectPtr = 1;
    }

    // Response packet corresponding to '[out] parameters in 'ApiCheckBox::isChecked'
    message isCheckedResponse
    {
        
        bool result = 1;
    }

}


// GRPC interface definition for class 'ApiCheckBox' from 'apicheckbox.h'
service ApiCheckBoxService
{
    /// Creates a new checkbox
    rpc create(ApiCheckBox.createRequest) returns (ApiCheckBox.createResponse);
    /// Destroys the component created with create(
    rpc destroy(ApiCheckBox.destroyRequest) returns (google.protobuf.Empty);
    /// Sets the button checked
    rpc setChecked(ApiCheckBox.setCheckedRequest) returns (google.protobuf.Empty);
    /// Checks if the checkbox is checked (ticked)
    rpc isChecked(ApiCheckBox.isCheckedRequest) returns (ApiCheckBox.isCheckedResponse);
}
